# poml

./: .env.azure-pipelines  .eslintrc.js  .gitignore  .gitmodules  .npmrc  .prettierignore  .prettierrc  .vscode-test.mjs  .vscodeignore  AGENTS.md  CITATION.cff  CLAUDE.md  RAI_README.md  README.md  azure-pipelines.yml  bump-version.js  eslint.config.js  jest.config.js  mkdocs.yml  package-lock.json  package.json  poml.tmLanguage.json  pyproject.toml  tsconfig.json  typedoc.json  vscodeignore.js  webpack.config.cli.js  webpack.config.extension.js  webpack.config.webview.js
.claude/commands/: browser-rpc-registry.md
.github/workflows/: check-version.yml  docs.yml  (+13 more)
docs/: components.md  contributing.md  index.md  standalone.md
examples/: 101_explain_character.poml  102_render_xml.poml  103_word_todos.poml  104_financial_analysis.poml  105_write_blog_post.poml  106_research.poml  107_read_report_pdf.poml  108_math_calculator.context.json  108_math_calculator.poml  109_math_verifier.context.json  109_math_verifier.poml  110_code_review.poml  201_orders_qa.poml  202_arc_agi.poml  203_expense_extract_document.context.json  203_expense_extract_document.poml  204_expense_extract_rules.context.json  204_expense_extract_rules.poml  205_expense_check_compliance.context.json  205_expense_check_compliance.poml  206_expense_send_email.context.json  206_expense_send_email.poml  301_generate_poml.poml  401_js_hello_world.mjs  402_py_hello_world.py  403_py_trace.py  404_travel_expense_agent.py  README.md  _generate_expects.py
gallery/: ask.poml  chat.poml  code_ask.poml  code_edit.poml  edit.poml  latex_edit.poml  latex_write.poml  pdf_understanding.poml  table_understanding.poml  word_understanding.poml
latest/: 404.html  index.html  objects.inv  sitemap.xml
media/: style.css
python/: .gitignore
(+140 files in other folders)
